--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -9,13 +9,28 @@ table.prefix=tbl
 camel.case.table.name=false
 camel.case.column.name=true
 
-datasource.class=org.firebirdsql.ds.FBSimpleDataSource
+
+#datasource.class=org.firebirdsql.ds.FBSimpleDataSource
 #datasource.database=//localhost:3050/c:/easygsp/www-vhost/davesgamestore/WEB-INF/db/GAMESTORE.FDB
 #datasource.database=localhost:/Applications/Dev/easygsp/www-vhost/davesgamestore/WEB-INF/db/GAMESTORE.FDB
 #datasource.database=localhost/3050:/Users/dsmith/easygsp/www-vhost/davesgamestore/WEB-INF/db/GAMESTORE.FDB
-datasource.database=localhost/3050:/Users/kon5068/Projects/github/easyom/database/easyom.fdb
-datasource.password=masterkey
-datasource.userName=sysdba
+#datasource.database=localhost/3050:/Users/dsmith/Projects/easyom/database/easyom.fdb;
+#datasource.password=masterkey
+#datasource.userName=sysdba
+
+#datasource.database=//localhost:3050/c:/easygsp/www-vhost/davesgamestore/WEB-INF/db/GAMESTORE.FDB
+#datasource.database=localhost:/Applications/Dev/easygsp/www-vhost/davesgamestore/WEB-INF/db/GAMESTORE.FDB
+#datasource.database=localhost/3050:/Users/dsmith/easygsp/www-vhost/davesgamestore/WEB-INF/db/GAMESTORE.FDB
+#datasource.database=localhost/3050:/Users/dsmith/Projects/easyom/database/easyom.fdb;
+#datasource.password=masterkey
+#datasource.userName=sysdba
+
+datasource.class=org.apache.derby.jdbc.EmbeddedDataSource
+datasource.databaseName=/Users/dsmith/Projects/easyom/database/derby
+#datasource.password=
+#datasource.user=
+db.dialect=sybrix.easyom.dialects.DerbyDialect
+
 #datasource.maxIdleTime=30
 #datasource.pooling=true
 #datasource.minPoolSize=5
