--- a/src/main/resources/log.properties
+++ b/src/main/resources/log.properties
@@ -7,7 +7,7 @@ handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 #.level = ALL
 
 # Set the default logging level for new ConsoleHandler instances
-java.util.logging.ConsoleHandler.level = FINER
+java.util.logging.ConsoleHandler.level = FINEST
 
 # Set the default logging level for new FileHandler instances
 java.util.logging.FileHandler.level = INFO
