--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.13'
     compile 'org.firebirdsql.jdbc:jaybird-jdk18:3.0.4'
 
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-alpha2'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testCompile 'junit:junit:4.4'
     testCompile 'org.codehaus.groovy:groovy-all:2.4.13'
@@ -45,8 +46,8 @@ publishing {
 }
 
 artifacts {
-    //archives javadocJar    
-    archives sourcesJar 
+    //archives javadocJar
+    archives sourcesJar
 }
 
 apply plugin: 'idea'
