cutover to mysql

--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -25,22 +25,24 @@ camel.case.column.name=true
 #datasource.password=masterkey
 #datasource.userName=sysdba
 
-datasource.class=org.apache.derby.jdbc.EmbeddedDataSource
-datasource.databaseName=/Users/dsmith/Projects/easyom/database/derby
+ddatasource.class=org.apache.derby.jdbc.EmbeddedDataSource
+ddatasource.databaseName=/Users/dsmith/Projects/github/easyom/database/derby
 #datasource.password=
 #datasource.user=
-db.dialect=sybrix.easyom.dialects.DerbyDialect
+ddb.dialect=sybrix.easyom.dialects.DerbyDialect
+db.dialect=sybrix.easyom.dialects.MySqlDialect
 
 #datasource.maxIdleTime=30
 #datasource.pooling=true
 #datasource.minPoolSize=5
 #datasource.maxPoolSize=30
-#datasource.loginTimeout=10
+#datazsource.loginTimeout=10
 
-#database.driver=com.mysql.jdbc.Driver
-#database.url=jdbc:mysql://localhost:3306/sybrixapps?useOldAliasMetadataBehavior=true
-#database.username=root
-#database.password=root
+datasource.class=com.mysql.cj.jdbc.MysqlDataSource
+datasource.databaseName=mt1
+datasource.url=jdbc:mysql://localhost:3306/mt1
+datasource.user=root
+datasource.password=my-secret-pw
 
 #jndi.name=
 
